Downsizing with Liquid

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
+---
+---
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
-        PJ Łabuda's Homepage
-    </title>
+    <meta charset="utf-8">
+    <title>PJ Łabuda's Homepage</title>
 </head>
 <body>
- <h1>
-     Welcome to the homepage of Piotr Jakub Łabuda
- </h1>
+ <h1>{{ "Welcome to the homepage of Piotr Jakub Łabuda" | downcase }}</h1>
 </body></html>
