--- a/test.html
+++ b/test.html
@@ -3,8 +3,7 @@
 <body>
 
     <iframe src="https://itch.io/embed-upload/1865249?color=0484d1" allowfullscreen="" width="550" height="570"
-        frameborder="0">
-        <a href="https://nora-sellisa.itch.io/snek-konnekt">Play Snek Konnekt on itch.io</a></iframe>
+        frameborder="0"></iframe>
 </body>
 
 </html>
