--- a/staff.html
+++ b/staff.html
@@ -5,11 +5,13 @@ title: Staff
 <h1>Staff</h1>
 
 <ul>
-  {% for author in site.authors %}
+    {% for author in site.authors %}
     <li>
-      <h2>{{ author.name }}</h2>
-      <h3>{{ author.position }}</h3>
-      <p>{{ author.content | markdownify }}</p>
+        <a href="{{ author.url }}">
+            <h2>{{ author.name }}</h2>
+        </a>
+        <h3>{{ author.position }}</h3>
+        <p>{{ author.content | markdownify }}</p>
     </li>
-  {% endfor %}
+    {% endfor %}
 </ul>
