--- a/staff.html
+++ b/staff.html
@@ -7,7 +7,7 @@ title: Staff
 <ul>
     {% for author in site.authors %}
     <li>
-        <a href="{{ author.url }}">
+        <a href="{{ author.url | relative_url }}">
             <h2>{{ author.name }}</h2>
         </a>
         <h3>{{ author.position }}</h3>
